alignment corrections

--- a/style.css
+++ b/style.css
@@ -82,6 +82,11 @@ p {
 
 label {
     word-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 
